--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,7 @@
 #root {
   width: 100vw;
   height: 100vh;
-  background-image: url("./assets/bg4.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color:#D7EFFF ;
 }
 
 body {
